--- a/templates/comments.html
+++ b/templates/comments.html
@@ -11,7 +11,7 @@
                         {% if comment.deleted %}
                             comment has been deleted
                         {%else%}
-                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ post_comment_macro(comment, dict_like) }}</li>
+                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ post_comment_macro(comment, comments_relationships) }}</li>
 
 
                         {% endif %}
