--- a/templates/product_comments.html
+++ b/templates/product_comments.html
@@ -12,7 +12,7 @@
                             comment has been deleted
 
                         {%else%}
-                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, dict_like) }}</li>
+                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, comments_relationships) }}</li>
 
 
                         {% endif %}
