--- a/templates/user_container/user_contain_product.html
+++ b/templates/user_container/user_contain_product.html
@@ -32,7 +32,7 @@
             {% for product in products %}
                 <div class="col-sm-6 col-md-4 col-xs-12 ct-u-paddingTop20">
 
-                {{ products_macro(product, dict_like, list_of_favourite) }}
+                {{ products_macro(product, products_relationship) }}
                 </div>
             {% endfor %}
          </div>
