--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -7,6 +7,9 @@
 <div class="container">
     <div class="ct-sectionHeader ct-u-paddingBottom20">
         <h2>login</h2>
+
+        <a href="{{ url_for("social.auth", backend="facebook") }}"><img src="{{ url_for('static',filename="image/log_in_with_facebook_button.png") }}"></a>
+
     </div>
     <div class="row">
         <div class="col-xs-offset-1 col-xs-10">
