--- a/templates/single_product.html
+++ b/templates/single_product.html
@@ -10,7 +10,7 @@
 
                     <h3 class="text-uppercase ct-u-size30 text-center">{{ product.title }}</h3>
 
-                    {% if current_user == product.product_author %}
+                    {% if current_user == product_author %}
 
                         <div class="edit-product-block text-center dropdown ct-u-paddingTop5 ct-u-size22">
 
@@ -34,7 +34,7 @@
                     <div class="ct-u-paddingBottom30 ct-u-borderBottomGrayLighter ct-clear-both">
 
                         <div class="popup-gallery">
-                            {% for img in product.image  %}
+                            {% for img in product_images  %}
                                 <a href="{{ url_for('uploaded_file',filename= img.filename) }}">
                                     <img src="{{ url_for('uploaded_file',filename= img.filename) }}" width="200"/>
                                 </a>
@@ -44,10 +44,14 @@
 
                         <p class="ct-u-motiveLight">
                             By
-                            <a href="{{ url_for('user', username =product.product_author.username ) }}">{{ product.product_author.username }}</a>
+                            <a href="{{ url_for('user', username =product_author.username ) }}">{{ product_author.username }}</a>
                             on
                             {{ product.published_at|datetime }}
 
+
+                        </p>
+                        <p class=".ct-u-motiveLight">
+                            Price -  <span class="ct-u-size20">{{ product.price }}</span>
                         </p>
                         <p>
                             {{ product.description }}
@@ -80,7 +84,7 @@
 
                                             {% elif product_liked.type == "unlike"%}
                                                 <img class="liked img-rounded" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}"
-                                                    obj_id={{post.id}} url = "like_product"  />
+                                                    obj_id={{product.id}} url = "like_product"  />
 
                                             {% elif product_liked.type == "funny"%}
                                                 <img class="liked img-rounded" src="{{ url_for('static',filename="image/reaction-funny.png" )}}"
@@ -223,7 +227,7 @@
                                                                 comment has been deleted
 
                                                             {%else%}
-                                                                <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, dict_like) }}</li>
+                                                                <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, comments_relationships) }}</li>
 
 
                                                             {% endif %}
@@ -289,9 +293,9 @@
                         {% for product in products %}
                             <li>
                             <a href="{{url_for('singleproduct', product_id=product.id)}}">
-                            {% if product.image %}
+                            {% if products_images[product.id]["images"] %}
 
-                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= product.image[0].filename )}}" style="height:50px">
+                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= products_images[product.id]["images"][0].filename )}}" style="height:50px">
 
                             {% else %}
                                 <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= "carusel4.jpg" )}}" style="height:50px">
@@ -312,12 +316,12 @@
 
 
                 </ul>
-                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Latest Comments</h4>
-                <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
-                    {% for comment in comments  %}
-                    <li><i class="fa fa-chevron-right"></i>{{ comment.com_author.username }} on <a href="#"><span>{{ comment.product.title }}</span></a></li>
-                    {% endfor %}
-                </ul>
+{#                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Latest Comments</h4>#}
+{#                <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">#}
+{#                    {% for comment in comments  %}#}
+{#                    <li><i class="fa fa-chevron-right"></i>{{ comment_dicr_authors[comment.id].username }} on <a href="#"><span>{{ product.title }}</span></a></li>#}
+{#                    {% endfor %}#}
+{#                </ul>#}
                 </div>
 
             </div>
