--- a/templates/user.html
+++ b/templates/user.html
@@ -31,13 +31,13 @@
 
 
 
-        <div class="col-xs-12 col-sm-8" id=user_about>
+        <div class="col-xs-12 col-sm-6" id=user_about>
             {% if user.last_seen %}
                 <p><i>Last seen on: {{ user.last_seen }}</i></p>
             {% endif %}
             <p class="ct-u-paddingBottom5">
                 <span>Registered on</span>
-                {{ user.registered_on }}
+                {{ user.registered_on|datetime }}
             </p>
             {% if user.about_me %}
                 <p>{{ user.about_me }}</p>
@@ -47,6 +47,8 @@
                     <a href="{{ url_for('user_edit', username = user.username ) }}">Edit</a>
                 {% endif %}
             {% endif %}
+            <a href="{{ url_for('user_edit', username = user.username ) }}">Edit yor profile</a>
+
         </div>
         </div>
 
@@ -161,9 +163,9 @@
 
                                     <div class="ct-blog ct-js-blogMasonry ct-u-borderBottomGrayLighter ct-u-paddingBottom20">
                                         {% for post in posts %}
-                                             <div class="col-sm-6 col-md-4 ct-js-blogMasonry-item" >
+                                             <div class="col-md-12 ct-js-blogMasonry-item" >
 
-                                            {{ posts_macro(post, dict_like, list_of_favourite) }}
+                                            {{ posts_macro(post, posts_relationships) }}
                                              </div>
 
                                         {% endfor %}
@@ -250,26 +252,15 @@ $(document).ready(function() {
      $("#product_block").on("click", UpdateProductContainer);
      $(".dropdown-menu .post, .dropdown-menu .product").on("click", UpdateFavouriteContainer);
      $("#post_block").on("click", UpdatePostContainer);
-    {# $("img.unliked, img.liked").on("click", ToggleLikeUnlike);#}
-    {#$('.smile').on("click", AddReaction);#}
-    {#ShowReactionDiv();#}
-    {#$("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);#}
+     $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);
     $("li#post_block").on("click", UpdatePostContainer);
 
 
  });
 
-   jQuery(window).on("load",function () {
 
-
-        if ($().masonry && ($('.ct-js-blogMasonry').length > 0) && ($devicewidth > 767)) {
-            $('.ct-js-blogMasonry').masonry({
-                itemSelector: '.ct-js-blogMasonry-item',
-                masonry: {
-                }
-            });
-        }
-
-});
 </script>
 {% endblock %}
