--- a/templates/home.html
+++ b/templates/home.html
@@ -128,8 +128,9 @@
             <div id="product_container" class="row ct-u-paddingTop20">
         <div class="ct-product">
             {% for product in products %}
+
                 {% if not product.deleted %}
-                    <div class="col-sm-4 col-xs-12 ct-u-paddingTop40">
+                    <div class="col-md-4 col-xs-12 ct-u-paddingTop30">
 
                     {{ products_macro(product, products_relationship) }}
 
