--- a/templates/helpers.html
+++ b/templates/helpers.html
@@ -310,7 +310,7 @@
             {{ form.text(class_="form-control", rows=2) }}
 
         </div>
-        <div id="hide" class="form-group col-xs-3 col-sm-2">
+        <div id="hide" class="form-group col-xs-3 col-sm-2 mobile-form-group">
             <label class="hand-cursor">
                 {{ form.file }}
                 <span class="fa fa-camera"></span>
