--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
             <div class="ct-blog ct-js-blogMasonry ct-u-borderBottomGrayLighter ct-u-paddingBottom20 ">
                         {% for post in posts%}
                             {% if not post.deleted %}
-                                <div class="col-sm-6 ct-js-blogMasonry-item" >
+                                <div class="col-sm-6 ct-js-blogMasonry-item home-post-grid" >
 
                                     {{ posts_macro(post, posts_relationship) }}
                                 </div>
