--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1557,10 +1557,9 @@ img.like-not-login{
 }
 
 
-
 /*image in pop-up div for single post/product und for comment*/
 .popup-div img{
-    width: 40px;
+    width: 30px;
     box-shadow:-3px 1px 1px rgba(0, 0, 0, 0.2);
     border-radius: 16px !important;
 }
@@ -1576,7 +1575,7 @@ img.like-not-login{
 }
 
 .fa.fa-star-o, .fa.fa-star {
-    font-size: 24px;
+    font-size: 28px;
     cursor: pointer;
 
 
@@ -2920,11 +2919,17 @@ img:hover + .avatar-edit{
 
 /*product grid ---------------------------------*/
 
-.one-product{
-      /*border-color: #b3b3b3;*/
-  /*!*border-radius: 50%;*!*/
-  /*border-width: 5px !important;*/
+
+
+.one-product {
+    border: 1px solid #b3b3b3 !important;
 }
+div.one-product:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+}
+
 .ct-product img {
   width: 100%;
 }
