--- a/templates/home.html
+++ b/templates/home.html
@@ -161,5 +161,12 @@ jQuery(window).on("load",function () {
             });
         }
      });
+
+    $(document).ready(function() {
+
+        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+        $('.smile').on("click", AddReaction);
+        ShowReactionDiv();
+    });
 </script>
 {% endblock %}
