delete test db and change zoho settings

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3230,8 +3230,9 @@ div.one-product:hover{
     padding-left: 0 !important;
 }
 
-.ct-navbarMobile--header a.left{
-    margin-left: 40%;
+.ct-navbarMobile--header a.right{
+    margin-left: 10%;
+    float: right;
 }
 
 
