--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@
                     <img src="{{ url_for('uploaded_file',filename="min_icon-user-default.png") }}"  width=49px />
                 {% endif %}
                 <a href="{{ url_for('user', username = current_user.username) }}">{{current_user.username}}</a>
-                <a class="left" href="{{ url_for('security.logout') }}">logout</a>
+                <a class="right" href="{{ url_for('security.logout') }}">logout</a>
             {% else %}
                  <a class="not-auth" href="{{ url_for('security.login') }}">Login</a>
 
