add config for flask-secure

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3231,7 +3231,7 @@ div.one-product:hover{
 }
 
 .ct-navbarMobile--header a.right{
-    margin-left: 10%;
+    margin-right: 10%;
     float: right;
 }
 
